2011-12-22  Lucas M. Schnorr <schnorr@gmail.com>
	* many/GNUmakefile: renaming General to PajeGeneral. It gets
	easier to later identify common files shared by all Paje bundles.

2011-12-20  (1.98) Lucas M. Schnorr <schnorr@gmail.com>
	* New release. Second RC before 2.0.

2011-12-18  Lucas M. Schnorr <schnorr@gmail.com>
	* General/NSColor+Additions.m: bug fix, correctly parsing RGB
	colors from trace using a NSScanner. The fix considers that a RGB
	color in the trace file is defined as three values from 0 to 1
	that defines the red, green and blue components. This is defined
	in the Paje trace file format description.
	* FileReader/PajeFileReader.m: bug fix, was casting NSData to a
	NSMutableData, causing an exception when running with the Cocoa's
	NSFileHandle implementation. In Linux, the used method to read
	from the file returned a NSMutableData, hiding the bug.
	* fixing several compilation warnings

2011-12-17  Lucas M. Schnorr <schnorr@gmail.com>
	* many: Fix several compilation warnings detected by gcc, clang
	and gcc by Apple.

2011-06-01  Lucas M. Schnorr <schnorr@gmail.com>
	* General/PSortedArray.[mh]: performance optimization in array
	insertion by using a smarter algorithm; if the object is to be
	inserted in an empty array or in the last position of the array,
	just add it to the end; otherwise, do a binary insertion. This
	change benefits only the reading of un-ordered trace files.

2011-03-15  Lucas M. Schnorr <schnorr@gmail.com>
	* General/PajeType.[mh]: color dictionaries must not have keys
	with white spaces in the beginning. If values for states start
	with white spaces, we trimm them out before registering the
	colors.

2011-02-21  Lucas M. Schnorr <schnorr@gmail.com>
	* General/PajeType.[mh], General/HierarchyBrowser.m,
	General/PajeEntityInspector.m, PajeSimulator/PajeSimul+Events.m
	PajeSimulator/PajeSimul.m, ReductionFilter/BusyNode.m,
	ReductionFilter/ReduceEntityType.[mh]: types have an ident (its